--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body{
     background-color: #363636;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-family: "Inter", sans-serif;
@@ -33,7 +33,7 @@ body{
                 padding: 10px;
                 margin-left: 15px;
                 &:hover{
-                    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 1);
+                    box-shadow: 0px 0px 0px 1px rgb(255, 255, 255);
                 }
             }
             
@@ -76,7 +76,7 @@ body{
                 padding: 20px;
                 text-align: center;
                 &:hover{
-                    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 1);
+                    box-shadow: 0px 0px 0px 1px rgb(255, 255, 255);
                 }
             }
         }
@@ -87,7 +87,11 @@ body{
 
 
 .event_section{
+    /* display: none; */
+    margin-top: 100px;
     min-width: 800px;
-    min-height: 200px;
-    box-shadow: 0px 0px 8px 22px rgba(206, 22, 22, 0.2);
+    min-height:695px;
+    background-color: #363636;
+    border-left: solid 1px #FFFFFF;
+    box-shadow: 20px 0px 10px 20px rgba(255, 255, 255, 0.2);
 }
