--- a/style.css
+++ b/style.css
@@ -78,6 +78,14 @@ body{
                 &:hover{
                     box-shadow: 0px 0px 0px 1px rgb(255, 255, 255);
                 }
+                &::after{
+                    height: 5px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    content: url(./img/icon/yellow_circle.png);
+                    transform: scale(.2)
+                }
             }
         }
     }
