--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body{
                     box-shadow: 0px 0px 0px 1px rgb(255, 255, 255);
                 }
                 &::after{
+                    display: none !important;
                     height: 5px;
                     display: flex;
                     justify-content: center;
@@ -96,7 +97,7 @@ body{
 
 
 .event_section{
-    /* display: none; */
+    display: none !important;
     margin-top: 100px;
     min-width: 800px;
     min-height:695px;
