Провальная попытка с промисами

--- a/style.css
+++ b/style.css
@@ -162,3 +162,14 @@ body{
         transform: scale(.2)
     }
 }
+
+
+
+.timer_animation{
+    animation: 5s show ease;
+}
+
+@keyframes show {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
