Работа со стилями + выбор времени ивента

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ body{
     background-color: #363636;
     border-left: solid 1px #FFFFFF;
     box-shadow: 32px 0px 10px 34px rgba(255, 255, 255, 0.2);
-    /* display: flex; */
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -105,20 +104,23 @@ body{
         li{
             text-align: center;
             margin-top: 20px;
-            border-bottom: 1px solid #FFFFFF;
         }
+    }
+
+    .event_box{
+        display: flex;
     }
 
     form{
         display: flex;
         justify-content: center;
         align-items: center;
-        input{
+        .event_text{
             color: #363636;
             padding: 2px 4px;
             font-size: 46px;
-            min-width: 350px;
-            min-height: 60px;
+            max-width: 350px;
+            max-height: 60px;
             &:active{
                 border: none;
                 outline:none  !important;
@@ -131,6 +133,11 @@ body{
                 border: none;
                 outline: none  !important;
             }
+        }
+        .event_time{
+            color: #363636;
+            font-size: 46px;
+            margin-right: 10px;
         }
         button{
             margin-left: 10px;
