работаю над добавлением ивентов - ловлю баги

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body{
     min-height:695px;
     background-color: #363636;
     border-left: solid 1px #FFFFFF;
-    box-shadow: 32px 0px 10px 34px rgba(255, 255, 255, 0.2);
+    box-shadow: 32px 0px 10px 22px rgba(255, 255, 255, 0.2);
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -242,6 +242,22 @@ body{
 
 
 /*Адаптив*/
+
+@media (max-width: 1024px){
+    body {
+        flex-direction: column;
+        font-size: 20px;
+    }
+    .calendar_body {
+        min-width: 100%; 
+    }
+    .event_section {
+        min-width: 100%;
+        border-left: none; 
+        border-top: solid 1px #FFFFFF;
+    }
+}
+
   @media (max-width: 768px) {
     body {
         flex-direction: column;
@@ -252,7 +268,6 @@ body{
     }
     .event_section {
         min-width: 100%;
-        margin-top: 20px;
         border-left: none; 
         border-top: solid 1px #FFFFFF;
     }
